feat 38: Pfad finden